text alignment in 2nd block fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
 }
 
 .innoma {
-    width: 45%;
+    /*width: 45%;*/
     /* height: 100px; */
     /* position: relative; */
     /* top: 115px; */
